test/corpus/proto2/import.txt
================================================================================
Import statement (single quote)
================================================================================

syntax = "proto2";

import 'a.proto';

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (import
   path: (string)))

================================================================================
Import statement (double quote)
================================================================================

syntax = "proto2";

import "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (import
   path: (string)))

================================================================================
Import statement (multiple)
================================================================================

syntax = "proto2";

import "a.proto";
import "b.proto";
import "google/protobuf/empty.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (import
   path: (string))
  (import
   path: (string))
  (import
   path: (string)))

================================================================================
Import statement (weak)
================================================================================

syntax = "proto2";

import weak "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (import
   modifier: (weak)
   path: (string)))

================================================================================
Import statement (public)
================================================================================

syntax = "proto2";

import public "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (import
   modifier: (public)
   path: (string)))
