test/corpus/proto2/package.txt
================================================================================
Package statement (simple)
================================================================================

syntax = "proto2";

package a;

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (package
   name: (full_ident
   	  part: (identifier))))

================================================================================
Package statement (fully qualified identifier)
================================================================================

syntax = "proto2";

package google.protobuf;

--------------------------------------------------------------------------------

(source_file
  (syntax2)
  (package
   name: (full_ident
   	  part: (identifier)
	  part: (identifier))))
