test/corpus/proto3/import.txt
================================================================================
Import statement (single quote)
================================================================================

syntax = "proto3";

import 'a.proto';

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (import
   path: (string)))

================================================================================
Import statement (double quote)
================================================================================

syntax = "proto3";

import "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (import
   path: (string)))

================================================================================
Import statement (multiple)
================================================================================

syntax = "proto3";

import "a.proto";
import "b.proto";
import "google/protobuf/empty.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (import
   path: (string))
  (import
   path: (string))
  (import
   path: (string)))

================================================================================
Import statement (weak)
================================================================================

syntax = "proto3";

import weak "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (import
   modifier: (weak)
   path: (string)))

================================================================================
Import statement (public)
================================================================================

syntax = "proto3";

import public "a.proto";

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (import
   modifier: (public)
   path: (string)))
