test/corpus/proto3/service.txt
================================================================================
Service (empty)
================================================================================

syntax = "proto3";

service Test {}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (service
   name: (service_name)
   (service_body)))

================================================================================
Service (option)
================================================================================

syntax = "proto3";

service Test {
  option deprecated = true;
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (service
   name: (service_name)
   (service_body
    (option
     name: (option_name
            part: (identifier))
     value: (constant (bool (true)))))))

================================================================================
Service (empty statement)
================================================================================

syntax = "proto3";

service Test {
  ;
}

--------------------------------------------------------------------------------

(source_file
  (syntax3)
  (service
   name: (service_name)
   (service_body
    (empty_statement))))
